===============================================================================

v0.5.1 (xx xxx 200x)
====================
 * Thanks to Philip Douglass for his bug reports and patches
 * The epguides parser would not close open file handles
 * The tv.com parser would crash on missing production/season/episode numbers
 * Switched to using sqlalchemy to access the database
 * Small fixes to the man page

v0.5.0 (18 May 2009)
====================
 * Rewrote the whole thing in python
 * Wrote a brand new tv.com parser
 * Small fixes in the epguides.com parser
 * Parsed data is now stored in an sqlite3 database

v0.4.7 (24 Feb 2007)
====================
 * Fixed a parsing issue introduced with 0.4.6

v0.4.6 (24 Feb 2007)
====================
 * Discovered yet another formatting possibility on epguides.com (used for
   instance for the show "Midsomer Murders") and adapted the parser accordingly
 * Slightly updated the man page

v0.4.5 (23 Jan 2007)
====================
 * Fixed some epguides parser issues

v0.4.4 (19 Nov 2006)
====================
 * Fixed the -i option when building the database (did the exact opposite of
   what it was supposed to do)

v0.4.3 (24 Oct 2006)
====================
 * We now actually honor the -i option when building the database
 * Added the possibility to override a show's name in the config file. This was
   needed for the new webisoder, a web-based episoder. Find out more about it
   at http://www.webisoder.net/
 * Oops, forgot to update episoder's version number in the last release...
 * Fixed a bug in the new epguides.com parser which would not drop episodes
   without a date

v0.4.2 (21 Oct 2006)
====================
 * Don't ignore the config file passed with -c anymore when building the db
 * Added parser for epguides.com (closes #38)

v0.4.1 (20 Apr 2006)
====================
 * Did some minor internal changes to get episoder to work on non-linux systems
 * Removed long options
 * Hotfix for the tv.com website changes
