@@ -7,6 +7,7 @@ v0.5.1 (xx xxx 200x)
  * The epguides parser would not close open file handles
  * The tv.com parser would crash on missing production/season/episode numbers
  * Switched to using sqlalchemy to access the database
+ * Properly implemented the user-agent configuration option
  * Small fixes to the man page
 
 v0.5.0 (18 May 2009)
